fixed the social media icons being off-centre on mobile view

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -57,6 +57,10 @@
   .social-link {
     margin: 0 0 2rem 0;
   }
+
+  .icon {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 500px) {
